--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,9 +51,11 @@ h6 {
     font-family: 'Oswald', sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+    color: white;
 }
 
 p {
+    color: white;
     font-size: 16px;
 }
 
