Add user authentication system for making a comment

--- a/trainers/templates/trainer_profile.html
+++ b/trainers/templates/trainer_profile.html
@@ -87,7 +87,7 @@
     </div>
 </form>
 {% else %}
-<h3>Create an account or sign in to leave your feedback!</h3>
+<h3 class="user-comment-box">Create an account or sign in to leave your feedback!</h3>
 {% endif %}
 
 
