Change sign up text

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -28,7 +28,7 @@
         </form>
 
         <p class="signup-text">
-            {% trans "Welcome back to Fitsphere! To leave feedback on our trainers, proceed to log in here. If you do not have an account yet," %}
-            <a href="{% url 'account_signup' %}">{% trans "Sign up here" %}</a>
+            {% trans "Welcome back to Fitsphere! To leave feedback on our trainers, proceed to log in here. If you do not have an account yet" %}
+            <a href="{% url 'account_signup' %}"><br>{% trans "Sign up here" %}</a>
         </p>
         {% endblock %}
