Add classes for styling

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -29,6 +29,6 @@
 
         <p class="login-text">
             {% trans "Already have an account?" %}
-            <a href="{% url 'account_login' %}">{% trans "Log in here" %}</a>
+            <a href="{% url 'account_login' %}"><br>{% trans "Log in here" %}</a>
         </p>
         {% endblock %}
