Change href routing

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link {% if request.path == '/trainers/' %}active{% endif %}"
-                                href="{% url 'trainers' %}"><span>Trainers</span></a>
+                                href="{% url 'trainers:trainers' %}"><span>Trainers</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% if request.path == '/about/' %}active{% endif %}" href="#">About</a>
