--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,25 +1,24 @@
-{% extends "account/base_manage.html" %}
+{% extends "base.html" %}
 {% load allauth i18n %}
 {% block head_title %}
-    {% trans "Sign Out" %}
+{% trans "Sign Out" %}
 {% endblock head_title %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Sign Out" %}
-    {% endelement %}
-    {% element p %}
-        {% trans 'Are you sure you want to sign out?' %}
-    {% endelement %}
-    {% url 'account_logout' as action_url %}
-    {% element form method="post" action=action_url no_visible_fields=True %}
-        {% slot body %}
+<div class="logout-wrapper">
+    <div class="logout-container">
+        <h1 class="logout-title">{% trans "Sign Out" %}</h1>
+        <p class="logout-message">{% trans "Are you sure you want to sign out?" %}</p>
+
+        {% url 'account_logout' as action_url %}
+        <form method="post" action="{{ action_url }}" class="logout-form" novalidate>
             {% csrf_token %}
             {{ redirect_field }}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
+
+            <button type="submit" class="logout-button">
                 {% trans 'Sign Out' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
+            </button>
+        </form>
+    </div>
+</div>
 {% endblock content %}
