Add correct href for cta link to sign up

--- a/pt/templates/pt/index.html
+++ b/pt/templates/pt/index.html
@@ -23,7 +23,7 @@
         <p class="statement">Join Now – Take Control of Your Health and Fitness</p>
 
         <!-- Sign up button with aria-label -->
-        <a href="#" class="btn" aria-label="Sign up for personal training now">Sign up now!</a>
+        <a href="{% url 'account_signup' %}" class="btn" aria-label="Sign up for personal training now">Sign up now!</a>
     </div>
 </section>
 {% endblock %}
