--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -2,35 +2,28 @@
 /* Style the scrollbar */
 ::-webkit-scrollbar {
     width: 6px;
-    /* Set width of the scrollbar */
 }
 
 /* Style the scrollbar track (background) */
 ::-webkit-scrollbar-track {
     background-color: #333;
-    /* Dark track background */
     border-radius: 10px;
-    /* Optional rounded corners for the track */
 }
 
 /* Style the scrollbar thumb (the draggable part) */
 ::-webkit-scrollbar-thumb {
     background-color: #FF5733;
-    /* Vibrant orange color for the thumb */
     border-radius: 10px;
-    /* Rounded corners for the thumb */
 }
 
 /* Style the thumb when hovered */
 ::-webkit-scrollbar-thumb:hover {
     background-color: #e44d26;
-    /* Darker orange on hover */
 }
 
 /* Optional: Hide the scrollbar buttons (arrows) */
 ::-webkit-scrollbar-button {
     display: none;
-    /* Hide up/down arrows */
 }
 
 html,
@@ -41,6 +34,12 @@ body {
     /* Body font */
     line-height: 1.6;
     padding: 0;
+    background-color: #333;
+}
+
+main {
+    min-height: 100vh;
+
 }
 
 h1,
@@ -50,16 +49,14 @@ h4,
 h5,
 h6 {
     font-family: 'Oswald', sans-serif;
-    /* Heading font */
     font-weight: 700;
-    /* Make the headings bold */
     letter-spacing: 1px;
-    /* Optional: adds space between letters for a cleaner look */
+    color: white;
 }
 
 p {
+    color: white;
     font-size: 16px;
-    /* Adjust size for body text */
 }
 
 span {
@@ -103,23 +100,16 @@ span {
 /* Active state for the nav link */
 .nav-link.active {
     color: #FF5733 !important;
-    /* Active link color */
     font-weight: bold;
-    /* Bold text for active link */
     text-decoration: underline;
-    /* Underline (underscore) effect */
     text-shadow: none;
-    /* Remove text-shadow for active link */
 }
 
 /* Ensure active link styles apply even when hovering */
 .nav-item.active:hover .nav-link {
     text-decoration: underline;
-    /* Keep the underline */
     text-shadow: none;
-    /* Remove shadow on hover for active link */
     font-weight: bold;
-    /* Keep the bold text on hover */
 }
 
 
@@ -127,16 +117,14 @@ span {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    /* Ensure the wrapper fills the height of the viewport */
 }
 
 .video-background {
     position: relative;
     width: 100%;
-    height: calc(100vh - 56px);
-    /* Full height of the viewport minus the height of the navbar */
+    height: 100vh;
+    /* Use full viewport height */
     overflow: hidden;
-    /* Prevent overflow if video is too large */
 }
 
 /* The video itself */
@@ -147,13 +135,99 @@ span {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* Ensures the video covers the entire container without distortion */
+    /* Ensures the video covers the screen without stretching */
+}
+
+/* Trainer Intro Section */
+.trainer-intro {
+    background-color: #333;
+    padding: 40px 20px;
+    border-radius: 8px;
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.trainer-intro h2 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: white;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+}
+
+.trainer-intro p {
+    font-size: 1.125rem;
+    color: white;
+    line-height: 1.6;
+    margin-bottom: 0;
 }
 
 
+/* Card Styling */
+.card {
+    border: 1px solid #FF5733;
+    background-color: #333;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    overflow: hidden;
+}
+
+/* Card Hover Effect */
+.card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Image Styling */
+.card-img-top {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin: 20px auto;
+    border: 5px solid #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Card Body */
+.card-body {
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+
+.card-title {
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.card-text {
+    font-size: 1rem;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+
+.image-pos {
+    padding: 0.5em;
+}
+
+/* Styling for the profile image */
+.profile-image {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    border-radius: 12px;
+    object-fit: cover;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
 .content {
     flex-grow: 1;
-    /* Allow content to take up remaining space */
 }
 
 .overlay {
@@ -167,11 +241,41 @@ span {
     text-align: center;
     color: #f1f1f1;
     background-color: rgba(128, 128, 128, 0.7) !important;
-    /* Ensures transparency */
     border-radius: 10px;
     z-index: 1;
     backdrop-filter: blur(5px);
-    /* Optional blur effect */
+}
+
+.intro-buttons .btn {
+    padding: 6px 15px;
+    font-size: 1.125rem;
+    text-transform: uppercase;
+    border-radius: 25px;
+    text-decoration: none;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.intro-buttons .btn-primary {
+    background-color: #FF5733;
+    color: white;
+}
+
+.intro-buttons .btn-secondary {
+    background-color: #1c8f74;
+    color: white;
+    margin-top: 3px;
+}
+
+.intro-buttons .btn:hover {
+    transform: translateY(-5px);
+}
+
+.intro-buttons .btn-primary:hover {
+    background-color: #d04e2f;
+}
+
+.intro-buttons .btn-secondary:hover {
+    background-color: #1c8f74;
 }
 
 .btn {
@@ -185,11 +289,401 @@ span {
         0 0 30px rgba(255, 87, 51, 0.6),
         0 0 40px rgba(255, 87, 51, 0.4),
         0 0 50px rgba(255, 87, 51, 0.2);
-    /* Glow effect around the button */
     transform: scale(1.1);
-    /* Slightly scale the button on hover */
     transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+}
+
+.card-body .card-text {
+    order: 0;
+}
+
+.card-body .card-text strong {
+    order: -1;
+}
+
+.age {
+    color: white;
+}
+
+.star-rating {
+    font-size: 1.5em;
+    /* Control the size of the stars */
+    color: #FF5733;
+    /* Default color for empty stars */
+}
+
+.star-rating .fa-star {
+    color: grey;
+}
+
+.star-rating .checked {
+    color: #FF5733;
+    /* Color for filled stars (yellow) */
+}
+
+.star-rating .fa-star-half-alt {
+    color: #FF5733;
+    /* Color for half-filled stars (yellow) */
+}
+
+/* About Section */
+.about-section {
+    background-color: #444;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    margin-bottom: 30px;
+    width: 100%;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.about-section h3 {
+    font-size: 1.8rem;
+    color: #FF5733;
+    margin-bottom: 20px;
+}
+
+.about-section p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #ccc;
+}
+
+/* Feedback Items */
+.feedback-item {
+    background-color: #444;
+    color: #FF5733;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.comment-h3 {
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+}
+
+.feedback-item p {
+    margin: 0;
+    font-size: 1.1rem;
+    line-height: 1.6;
+}
+
+/* Styles for the comment box */
+.user-comment-box {
+    background-color: #444;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    max-width: 800px;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    margin-left: auto;
+    margin-right: auto;
+
+    /* Centering content inside the box */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* Horizontally center */
+    justify-content: center;
+    /* Vertically center */
+}
+
+/* Styles for the comment text input box */
+.text-box {
+    width: 100%;
+    padding: 15px;
+    margin-top: 10px;
+    background-color: #555;
+    border: 1px solid #666;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 1rem;
+    line-height: 1.5;
+    resize: vertical;
+    min-height: 120px;
+    transition: border-color 0.3s ease;
+}
+
+.text-box:focus {
+    background-color: #555;
+    /* Lighter background when focused */
+    outline: none;
+}
+
+/* Rating dropdown */
+.form-group {
+    margin-top: 20px;
+}
+
+.form-label {
+    font-size: 1rem;
+    color: #bbb;
+    margin-bottom: 5px;
+}
+
+.form-select {
+    width: 100%;
+    padding: 10px;
+    background-color: #555;
+    border: 1px solid #666;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 1rem;
+    transition: border-color 0.3s ease;
+}
+
+.form-select:focus {
+    outline: none;
+    border-color: #00bcd4;
+}
+
+/* Submit button */
+.form-btn {
+    width: 100%;
+    padding: 12px;
+    margin-top: 20px;
+    background-color: #00bcd4;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.form-btn:hover {
+    background-color: #0097a7;
+}
+
+.star-rating-label {
+    margin-top: 10px;
+    font-size: 1rem;
+    color: #bbb;
+}
+
+/* General container for centering the content */
+.auth-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 0 20px;
+}
+
+/* The form box styling */
+.auth-box {
+    background-color: #444;
+    padding: 40px 50px;
+    border-radius: 8px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    max-width: 500px;
+    text-align: center;
+    min-height: 450px;
+}
+
+/* Title inside the form */
+.auth-title {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: white;
+}
+
+/* Error message styling */
+.error-message {
+    background-color: #ff4d4d;
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
+    margin-bottom: 20px;
+}
+
+/* Style for all input fields inside .auth-box */
+.auth-box input[type="text"],
+.auth-box input[type="password"],
+.auth-box input[type="email"],
+.auth-box input[type="checkbox"] {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: 1px solid white;
+    background-color: #333;
+    color: white;
+    font-size: 16px;
+}
+
+/* Optional: Specific styles for the checkbox */
+.auth-box input[type="checkbox"] {
+    width: auto;
+    display: inline-block;
+    margin-right: 5px;
+}
+
+/* Focus styling to highlight the input field when active */
+.auth-box input[type="text"]:focus,
+.auth-box input[type="password"]:focus,
+.auth-box input[type="email"]:focus,
+.auth-box input[type="checkbox"]:focus {
+    border-color: #1c8f74;
+    outline: none;
+}
+
+
+/* Label styling */
+.auth-box label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: white;
+}
+
+/* Focus state for input fields */
+.auth-box input:focus {
+    border-color: #1c8f74;
+    outline: none;
+}
+
+/* Buttons */
+.btn-submit {
+    background-color: #1c8f74;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    width: 100%;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.btn-submit:hover {
+    background-color: #177b62;
+}
+
+/* "Remember Me" label styling */
+.remember-label {
+    font-size: 14px;
+    color: white;
+}
+
+/* Forgot password and Sign Up links */
+
+.forgot-password,
+.signup-text a {
+    color: #1c8f74;
+    text-decoration: none;
+}
+
+.forgot-password a:hover,
+.signup-text a:hover {
+    color: #177b62;
+    text-decoration: underline;
+}
+
+.signup-text {
+    color: white;
+    margin-top: 20px;
+    font-size: 14px;
+}
+
+/* Styling for the password rules */
+.form-group li {
+    list-style-type: none;
+    /* Remove default list markers */
+    padding-left: 0;
+    color: #fff;
+    /* White text color */
+    margin-top: 10px;
+}
+
+/* Styling when the rule is met */
+.form-group li.valid {
+    color: #28a745;
+    /* Green */
+}
+
+/* Styling when the rule is not met */
+.form-group li.invalid {
+    color: #dc3545;
+    /* Red */
+}
+
+/* Make the whole page take the full viewport height */
+.logout-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #333;
+    padding: 0 10px;
+    margin: 0;
+}
+
+/* Container for logout content */
+.logout-container {
+    background-color: #444;
+    /* Slightly lighter background for the container */
+    padding: 30px;
+    border-radius: 8px;
+    text-align: center;
+    width: 100%;
+    max-width: 400px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Title Styling */
+.logout-title {
+    font-size: 2rem;
+    margin-bottom: 10px;
+    color: #f1f1f1;
+}
+
+/* Message Styling */
+.logout-message {
+    font-size: 1.1rem;
+    margin-bottom: 30px;
+    color: #ccc;
+}
+
+/* Button Styling */
+.logout-button {
+    background-color: #f44336;
+    color: #fff;
+    border: none;
+    padding: 12px 24px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+/* Button Hover Effect */
+.logout-button:hover {
+    background-color: #d32f2f;
+    transform: scale(1.05);
+}
+
+/* Button Focus Effect */
+.logout-button:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(255, 87, 34, 0.5);
+}
+
 
 
 footer {
@@ -198,7 +692,6 @@ footer {
     padding: 20px 0;
     text-align: center;
     width: 100%;
-    /* Make sure footer stretches across the entire page */
 }
 
 .social-icons i {
@@ -213,9 +706,7 @@ footer {
 }
 
 .social-icons i:hover {
-    /* Stronger text-shadow for better visibility of the glow */
     text-shadow: 0 0 10px rgba(255, 87, 51, 1),
-        /* First layer with high opacity (vibrant orange) */
         0 0 20px rgba(255, 87, 51, 0.8),
         /* Second layer */
         0 0 30px rgba(255, 87, 51, 0.6),
@@ -223,10 +714,57 @@ footer {
         0 0 40px rgba(255, 87, 51, 0.4),
         /* Fourth layer */
         0 0 50px rgba(255, 87, 51, 0.2);
-    /* Fifth layer with lower opacity */
     transform: scale(1.1);
-    /* Slightly scale the text on hover */
     transition: text-shadow 0.3s ease,
         color 0.3s ease,
         transform 0.3s ease;
+}
+
+
+/* Responsive Design: Smaller Screens */
+@media (max-width: 767px) {
+    .card {
+        margin: 10px;
+    }
+
+    .card-img-top {
+        width: 120px;
+        height: 120px;
+    }
+
+    .card-body {
+        padding: 15px;
+    }
+
+    .intro-buttons {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .intro-buttons .btn {
+        width: 100%;
+        padding: 6px 0;
+        margin-top: 10px;
+    }
+
+    .profile-image {
+        width: 120px;
+        height: 120px;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    h3 {
+        font-size: 1.2rem;
+    }
+
+    .text-box {
+        height: 120px;
+    }
 }
