--- a/templates/base.html
+++ b/templates/base.html
@@ -46,12 +46,12 @@
 
                 <!-- Hamburger Button for Mobile View -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-nav"
-                    aria-controls="navbarnav" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span> <!-- This is the hamburger icon -->
                 </button>
 
                 <!-- Navbar Links (Centering) -->
-                <div class="collapse navbar-collapse justify-content-center" id="#navbar-nav">
+                <div class="collapse navbar-collapse justify-content-center" id="navbar-nav">
                     <ul class="navbar-nav">
                         <!-- Show 'Home' link only when user is NOT authenticated -->
                         {% if not user.is_authenticated %}
