--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,8 @@ body {
     line-height: 1.6;
     padding: 0;
     background-color: #333;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 main {
